name:                shoot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/felixgb/shoot#readme
license:             BSD3
license-file:        LICENSE
author:              Felix Bowman
maintainer:          felixgbowman@gmail.com
copyright:           2017 Felix Bowman
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , src/Lexer.x
                   , src/Parser.y
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Render3
                     , Util.Common
                     , Util.Shaders
                     , Util.Model
                     , Entity
                     , Lexer
                     , ObjectParser
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , bytestring
                     , vector
                     , GLFW-b
                     , OpenGLRaw
                     , linear
                     , containers
                     , array
  build-tools:         alex
  default-language:    Haskell2010

executable shoot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Odph
  build-depends:       base
                     , shoot
  default-language:    Haskell2010

test-suite shoot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shoot
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/felixgb/shoot
